Fix contrast
A SkipNav shouldn't violate WCAG contrast requirements

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,8 +9,9 @@
   position: absolute;
   overflow: hidden;
   top: -10px;
-
+  
   &:focus {
+    color: #003b77;
     position: fixed;
     top: 10px;
     left: 10px;
